# mcp-etherscan

./: .env.example  .gitignore  CHANGELOG.md  CONFIGURATION.md  Makefile  PROJECT_STRUCTURE.md  README.md  READY_TO_TEST.md  diagnose.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.bat  setup.sh  test_multi_chain.py  test_service.py  validate.py
src/: __init__.py  __main__.py  models.py  server.py
src/services/: base_scanner.py  bscscan_service.py  chain_manager.py  etherscan_service.py
